--- a/introMenu.html
+++ b/introMenu.html
@@ -156,60 +156,80 @@
                                 <span>0</span>
                                 <span>项</span>
                             </div>
-                            <img class="eyeOff" src="img/eyeOff.png">
-                            <img class="eyeOn" src="img/eyeOn.png">
-                            <img class="delete" src="img/delete.png">
-                            <img class="add" src="img/add.png">
+                            <div class="eyeOff"></div>
+                            <div class="eyeOn"></div>
+                            <div class="delete"></div>
+                            <div class="add"></div>
                         </div>
                     </div>
                 </div>
                 <div class="cSContent">
                     <div>
-                        <ul>
+                        <ul class="cSContentUl">
                             <li>
-                                <label><input type="radio"></label>
-                                <span class="triangleRight"></span>
-                                <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
-                                <img class="eyeSub" src="img/subEyeOn.png">
-                                <img class="penSub" src="img/subPen.png">
-                                <img class="deleteSub" src="img/subDelete.png">
-                                <span class="subNewsDate">2015-11-3</span>
+                                <div class="cSCUlContainer">
+                                    <label><input type="checkbox"></label>
+                                    <span class="triangleRight"></span>
+                                    <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
+                                    <span class="subNewsDate">2015-11-3</span>
+                                    <div class="cSCContainer">
+                                        <div class="eyeSub"></div>
+                                        <div class="penSub"></div>
+                                        <div class="deleteSub"></div>
+                                    </div>
+                                </div>
                             </li>
                             <li>
-                                <label><input type="radio"></label>
-                                <span class="triangleRight"></span>
-                                <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
-                                <img class="eyeSub" src="img/subEyeOn.png">
-                                <img class="penSub" src="img/subPen.png">
-                                <img class="deleteSub" src="img/subDelete.png">
-                                <span class="subNewsDate">2015-11-3</span>
+                                <div class="cSCUlContainer">
+                                    <label><input type="checkbox"></label>
+                                    <span class="triangleRight"></span>
+                                    <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
+                                    <span class="subNewsDate">2015-11-3</span>
+                                    <div class="cSCContainer">
+                                        <div class="eyeSub"></div>
+                                        <div class="penSub"></div>
+                                        <div class="deleteSub"></div>
+                                    </div>
+                                </div>
                             </li>
                             <li>
-                                <label><input type="radio"></label>
-                                <span class="triangleRight"></span>
-                                <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
-                                <img class="eyeSub" src="img/subEyeOn.png">
-                                <img class="penSub" src="img/subPen.png">
-                                <img class="deleteSub" src="img/subDelete.png">
-                                <span class="subNewsDate">2015-11-3</span>
+                                <div class="cSCUlContainer">
+                                    <label><input type="checkbox"></label>
+                                    <span class="triangleRight"></span>
+                                    <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
+                                    <span class="subNewsDate">2015-11-3</span>
+                                    <div class="cSCContainer">
+                                        <div class="eyeSub"></div>
+                                        <div class="penSub"></div>
+                                        <div class="deleteSub"></div>
+                                    </div>
+                                </div>
                             </li>
                             <li>
-                                <label><input type="radio"></label>
-                                <span class="triangleRight"></span>
-                                <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
-                                <img class="eyeSub" src="img/subEyeOn.png">
-                                <img class="penSub" src="img/subPen.png">
-                                <img class="deleteSub" src="img/subDelete.png">
-                                <span class="subNewsDate">2015-11-3</span>
+                                <div class="cSCUlContainer">
+                                    <label><input type="checkbox"></label>
+                                    <span class="triangleRight"></span>
+                                    <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
+                                    <span class="subNewsDate">2015-11-3</span>
+                                    <div class="cSCContainer">
+                                        <div class="eyeSub"></div>
+                                        <div class="penSub"></div>
+                                        <div class="deleteSub"></div>
+                                    </div>
+                                </div>
                             </li>
                             <li>
-                                <label><input type="radio"></label>
-                                <span class="triangleRight"></span>
-                                <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
-                                <img class="eyeSub" src="img/subEyeOn.png">
-                                <img class="penSub" src="img/subPen.png">
-                                <img class="deleteSub" src="img/subDelete.png">
-                                <span class="subNewsDate">2015-11-3</span>
+                                <div class="cSCUlContainer">
+                                    <label><input type="checkbox"></label>
+                                    <span class="triangleRight"></span>
+                                    <span>2015年亚太需求工程研讨会在武汉大学成功召开</span>
+                                    <span class="subNewsDate">2015-11-3</span>
+                                    <div class="cSCContainer">
+                                        <div class="eyeSub"></div>
+                                        <div class="penSub"></div>
+                                        <div class="deleteSub"></div>
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     </div>
