--- a/introMenu.html
+++ b/introMenu.html
@@ -17,59 +17,49 @@
                 <h3>编辑</h3>
             </div>
             <div class="eIFormContainer eFormContainer">
-                <form method="get" action="#" class="eIForm clearFix">
-                    <div class="inputContainerL">
-                        <h3 class="pEIntroH">简介</h3>
-                        <label for="personsEIntro"></label>
-                        <textarea name="personsEWords" id="personsEIntro"></textarea>
-                        <span class="personsEIcon"><img src="img/personsIcon.jpg"></span>
-                    </div>
-                    <h3 class="pEEssential">基本信息</h3>
-                    <div class="inputContainerS clearFix">
-                        <div class="inputContainer">
-                            <label for="personsEName" class="pELabel">姓名</label>
-                            <input type="text" name="personsEName" id="personsEName">
-                        </div>
-                        <div class="inputContainer">
-                            <span id="personsSex">性别</span>
-                            <label class="pERadio"><input type="radio" name="personsSex" >男</label>
-                            <label class="pERadio"><input type="radio" name="personsSex">女</label>
-                        </div>
-                        <div class="inputContainer">
-                            <label for="personsECountry" class="pELabel">国籍</label>
-                            <input type="text" id="personsECountry">
-                        </div>
-                        <div class="inputContainer">
-                            <label for="personsENation" class="pELabel">民族</label>
-                            <input type="text" id="personsENation">
-                        </div>
-                        <div class="inputContainer">
-                            <label for="personsEBirthPlace" class="pELabel">出生地</label>
-                            <input type="text" id="personsEBirthPlace">
-                        </div>
-                        <div class="inputContainer">
-                            <label for="personsEBirthDay" class="pELabel">出生日期</label>
-                            <input type="text" id="personsEBirthDay">
-                        </div>
-                        <div class="inputContainer">
-                            <label for="personsEGraduateSchool" class="pELabel">毕业院校</label>
-                            <input type="text" id="personsEGraduateSchool">
-                        </div>
-                        <div class="inputContainer">
-                            <label for="personsEPolitics" class="pELabel">政治面貌</label>
-                            <input type="text" id="personsEPolitics">
-                        </div>
-                    </div>
-                    <div class="inputContainerF">
-                        <h3 class="pEWorks">在研项目</h3>
-                        <label><textarea></textarea></label>
-                    </div>
-                    <div class="inputContainerF">
-                        <h3 class="pEAchievement">主要成就</h3>
-                        <label><textarea></textarea></label>
-                    </div>
-                    <button type="submit">完成</button>
-                </form>
+                <ul>
+                    <li>
+                        <span class="triangleRight"></span>
+                        实验室概况
+                        <img src="img/iconTri.png">
+                    </li>
+                    <li>
+                        <span class="triangleDown"></span>
+                        研究队伍
+                        <img src="img/iconTri.png">
+                        <ul>
+                            <li>
+                                <img src="img/iconMinus.png">
+                                优秀人才
+                                <img src="img/iconTriL.png">
+                            </li>
+                            <li>
+                                <img src="img/iconMinus.png">
+                                教授
+                                <img src="img/iconTriL.png">
+                            </li>
+                            <li>
+                                <img src="img/iconMinus.png">
+                                副教授
+                                <img src="img/iconTriL.png">
+                            </li>
+                            <li>
+                                <img src="img/iconMinus.png">
+                                讲师
+                                <img src="img/iconTriL.png">
+                            </li>
+                            <li>
+                                <img src="img/iconPlus.png">
+                                添加更多...
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="triangleRight"></span>
+                        科学研究
+                        <img src="img/iconTri.png">
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -150,20 +140,22 @@
                     </div>
                     <div class="cSTitle">
                         <h1>新闻动态</h1>
-                        <div class="cSTOptions">
+                        <div class="cSTOptions clearFix">
+                            <div class="cSTOIcons">
+                                <div class="eyeOff"></div>
+                                <div class="eyeOn"></div>
+                                <div class="delete"></div>
+                                <div class="add"></div>
+                            </div>
                             <div class="cSTOHint">
                                 <span>已选中</span>
                                 <span>0</span>
                                 <span>项</span>
                             </div>
-                            <div class="eyeOff"></div>
-                            <div class="eyeOn"></div>
-                            <div class="delete"></div>
-                            <div class="add"></div>
                         </div>
                     </div>
                 </div>
-                <div class="cSContent">
+                <div class="cSContent cSContentMenu">
                     <div>
                         <ul class="cSContentUl">
                             <li>
@@ -232,14 +224,6 @@
                                 </div>
                             </li>
                         </ul>
-                    </div>
-                </div>
-                <div class="cSFooter">
-                    <div class="cSFContainer">
-                        <span class="cSContentFrom">来源</span>
-                        <span class="cSCFNum">XXX</span>
-                        <span class="cSContentSeen">浏览量</span>
-                        <span class="cSCSNum">XXX</span>
                     </div>
                 </div>
             </div>
