--- a/introMenu.html
+++ b/introMenu.html
@@ -13,51 +13,51 @@
 <body>
     <div class="editor editorIntro">
         <div class="editorContainer">
-            <div class="eIHeader eHeader">
+            <div class="eHeader">
                 <h3>编辑</h3>
             </div>
-            <div class="eIFormContainer eFormContainer">
-                <ul>
-                    <li>
+            <div class="eFormContainer">
+                <ul class="eFormOuterUl">
+                    <li class="eFormOuterLi">
                         <span class="triangleRight"></span>
                         实验室概况
-                        <img src="img/iconTri.png">
+                        <img src="img/iconTri.png" class="iconTri">
                     </li>
-                    <li>
+                    <li class="eFormOuterLi">
                         <span class="triangleDown"></span>
                         研究队伍
-                        <img src="img/iconTri.png">
-                        <ul>
-                            <li>
+                        <img src="img/iconTri.png" class="iconTri">
+                        <ul class="eFormInnerUl">
+                            <li class="eFormInnerLi">
                                 <img src="img/iconMinus.png">
                                 优秀人才
-                                <img src="img/iconTriL.png">
+                                <img src="img/iconTriL.png" class="iconTri">
                             </li>
-                            <li>
+                            <li class="eFormInnerLi">
                                 <img src="img/iconMinus.png">
                                 教授
-                                <img src="img/iconTriL.png">
+                                <img src="img/iconTriL.png" class="iconTri">
                             </li>
-                            <li>
+                            <li class="eFormInnerLi">
                                 <img src="img/iconMinus.png">
                                 副教授
-                                <img src="img/iconTriL.png">
+                                <img src="img/iconTriL.png" class="iconTri">
                             </li>
-                            <li>
+                            <li class="eFormInnerLi">
                                 <img src="img/iconMinus.png">
                                 讲师
-                                <img src="img/iconTriL.png">
+                                <img src="img/iconTriL.png" class="iconTri">
                             </li>
-                            <li>
+                            <li class="eFormInnerLi eFormInnerMore">
                                 <img src="img/iconPlus.png">
                                 添加更多...
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="eFormOuterLi">
                         <span class="triangleRight"></span>
                         科学研究
-                        <img src="img/iconTri.png">
+                        <img src="img/iconTri.png" class="iconTri">
                     </li>
                 </ul>
             </div>
