--- a/introMenu.html
+++ b/introMenu.html
@@ -60,6 +60,7 @@
                         <img src="img/iconTri.png" class="iconTri">
                     </li>
                 </ul>
+                <span class="eButton"><a href="#">完成</a></span>
             </div>
         </div>
     </div>
