--- a/index.html
+++ b/index.html
@@ -43,20 +43,68 @@
         </div>
         <div class="navContainer clearFix">
             <ul class="navOptions clearFix">
-                <li class="options"><a href="#" class="optionsA">实验室概况</a></li>
-                <li class="options"><a href="#" class="optionsA">研究队伍</a></li>
-                <li class="options"><a href="#" class="optionsA">科学研究</a></li>
+                <li class="options">
+                    <a href="#" class="optionsA">实验室概况</a>
+                    <ul class="subOptions">
+                        <li><a href="#">实验室简介</a></li>
+                        <li><a href="#">学术委员会</a></li>
+                        <li><a href="#">领导班子</a></li>
+                        <li><a href="#">机构设置</a></li>
+                        <li><a href="#">规章制度</a></li>
+                        <li><a href="#">大型仪器设备</a></li>
+                    </ul>
+                </li>
+                <li class="options">
+                    <a href="#" class="optionsA">研究队伍</a>
+                    <ul class="subOptions">
+                        <li><a href="#">优秀人才</a></li>
+                        <li><a href="#">教授</a></li>
+                        <li><a href="#">副教授</a></li>
+                        <li><a href="#">讲师</a></li>
+                    </ul>
+                </li>
+                <li class="options">
+                    <a href="#" class="optionsA">科学研究</a>
+                    <ul class="subOptions">
+                        <li><a href="#">承担项目</a></li>
+                        <li><a href="#">发表论文</a></li>
+                        <li><a href="#">获奖情况</a></li>
+                        <li><a href="#">专利软件</a></li>
+                        <li><a href="#">制定标准</a></li>
+                    </ul>
+                </li>
                 <li class="options mainOptions">
                     <a href="#" id="cooA" class="optionsA">合作交流</a>
                     <ul class="subOptions">
-                        <li><a href="#">英国</a></li>
-                        <li><a href="#">美国</a></li>
+                        <li><a href="#">举办会议</a></li>
+                        <li><a href="#">学术报告</a></li>
+                        <li><a href="#">外出交流</a></li>
+                        <li><a href="#">引智计划</a></li>
                     </ul>
                 </li>
                 <li class="options opHome"><a href="#"><img src="img/homeIcon.png" class="homeIcon"></a></li>
-                <li class="options"><a href="#" class="optionsA">人才培养</a></li>
-                <li class="options"><a href="#" class="optionsA">研究课题</a></li>
-                <li class="options"><a href="#" class="optionsA">工作动态</a></li>
+                <li class="options">
+                    <a href="#" class="optionsA">人才培养</a>
+                    <ul class="subOptions">
+                        <li><a href="#">硕士生培养</a></li>
+                        <li><a href="#">博士生培养</a></li>
+                    </ul>
+                </li>
+                <li class="options">
+                    <a href="#" class="optionsA">研究课题</a>
+                    <ul class="subOptions">
+                        <li><a href="#">自主课题</a></li>
+                        <li><a href="#">开放课题</a></li>
+                    </ul>
+                </li>
+                <li class="options">
+                    <a href="#" class="optionsA">工作动态</a>
+                    <ul class="subOptions">
+                        <li><a href="#">新闻动态</a></li>
+                        <li><a href="#">通知公告</a></li>
+                        <li><a href="#">人才招聘</a></li>
+                    </ul>
+                </li>
                 <li class="options"><a href="#" class="optionsA">下载中心</a></li>
             </ul>
         </div>
