--- a/personPage.html
+++ b/personPage.html
@@ -16,7 +16,7 @@
             <div class="headerTop">
                 <div class="hBtnContainer clearFix">
                     <div class="hBtnContainerL">
-                        <span class="button hBtnL"><a href="#">修改网页后缀名</a></span>
+                        <span class="button hBtnL owner"><a href="#">修改网页后缀名</a></span>
                     </div>
                     <div class="hBtnContainerR">
                         <span class="button hBtnR1 active"><a href="#">首页</a></span>
@@ -40,7 +40,7 @@
         <div class="introduction">
             <div class="introHeader">
                 <h2 class="contentTitle">个人简介</h2>
-                <span class="button buttonRight" onclick="editorIOn()"><a href="#">编辑</a></span>
+                <span class="button buttonRight owner" onclick="editorIOn()"><a href="#">编辑</a></span>
             </div>
             <div class="introContent clearFix">
                 <div class="introCol introCol1">
