--- a/personPageE.html
+++ b/personPageE.html
@@ -17,7 +17,7 @@
             <h3>编辑</h3>
         </div>
         <div class="eIFormContainer eFormContainer">
-            <form method="get" action="#" class="eIForm clearFix">
+            <form method="get" class="eIForm clearFix">
                 <div class="inputContainerL">
                     <h3 class="pEIntroH">简介</h3>
                     <label for="personsEIntro"></label>
