--- a/index.html
+++ b/index.html
@@ -206,24 +206,24 @@
                 <span class="contentMore moreButton"><a href="#">More</a></span>
             </div>
             <div class="personsContent clearFix">
-                <div class="personsIContainer pIC1">
+                <div class="personsIContainer pIC">
                     <div class="pIBefore"></div>
                     <div class="personsIcon"><img src="img/personsIcon.jpg"></div>
                     <div class="pIconNote"><span class="personName">张三</span><span class="personClass">教授</span></div>
                 </div>
-                <div class="personsIContainer pIC2">
+                <div class="personsIContainer pIC">
                     <div class="personsIcon"><img src="img/personsIcon.jpg"></div>
                     <div class="pIconNote"><span class="personName">李四</span><span class="personClass">教授</span></div>
                 </div>
-                <div class="personsIContainer pIC3">
+                <div class="personsIContainer pIC">
                     <div class="personsIcon"><img src="img/personsIcon.jpg"></div>
                     <div class="pIconNote"><span class="personName">王五</span><span class="personClass">教授</span></div>
                 </div>
-                <div class="personsIContainer pIC4">
+                <div class="personsIContainer pIC">
                     <div class="personsIcon"><img src="img/personsIcon.jpg"></div>
                     <div class="pIconNote"><span class="personName">张三</span><span class="personClass">教授</span></div>
                 </div>
-                <div class="personsIContainer pIC5">
+                <div class="personsIContainer pIC">
                     <div class="personsIcon"><img src="img/personsIcon.jpg"></div>
                     <div class="pIconNote"><span class="personName">张三</span><span class="personClass">教授</span></div>
                     <div class="pIBehind"></div>
