--- a/personPage.html
+++ b/personPage.html
@@ -267,7 +267,7 @@
                         <div class="fileComment"></div>
                     </div>
                 </div>
-                <div class="fileControlContainer">
+                <div class="fileControlContainer owner">
                     <div class="fileControl">
                         <div class="iconPen"></div>
                         <div class="division"></div>
@@ -286,5 +286,8 @@
         </div>
     </footer>
     <script src="js/sub.js"></script>
+    <script>
+
+    </script>
 </body>
 </html>
